# tesis-mutation-testing

./: .gitignore  README.md
estrategias/: estrategia_1_prompt_simple.py  estrategia_2_iterativo.py  estrategia_3_mutation_feedback.py
resultados/: reporte_estrategia1.json  reporte_estrategia2.json  reporte_estrategia3.json
shared/: llm_client.py  metricas.py
sujetos/api-auth/: database.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  services.py
sujetos/api-auth/tests/: test_auth.py
sujetos/api-reservas/: database.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  services.py
sujetos/api-reservas/tests/: test_reservas.py
sujetos/api-tareas/: database.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  services.py  tests_conftest_backup.py
sujetos/api-tareas/tests/: test_tareas.py
