[project]
name = "api-tareas"
version = "1.0.0"
description = "API REST simple de tareas - sujeto de prueba para tesis de mutation testing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mutmut>=3.0.0",
]

[tool.mutmut]
source_paths = ["services.py", "routes.py", "models.py", "schemas.py", "database.py", "main.py"]
tests_dir = ["tests"]
runner = "python -m pytest"
